# groebner

./: .clang-format  .dir-locals.el  .gitignore  .gitmodules  CMakeLists.txt  CachedMonomial.h  F5.cpp  F5.h  F5Test.cpp  FGb.cpp  FGb.h  FGbTest.cpp  FindFLINT.cmake  FindMPIR.cmake  GbRunner.h  Ideal.cpp  Ideal.h  IdealTest.cpp  ImmutablePolynomial.h  MM.h  MMTest.cpp  Matrix.h  Monomial.cpp  Monomial.h  MonomialTest.cpp  Order.h  Polynomial.cpp  Polynomial.h  PolynomialTest.cpp  README.md  Signature.h  Term.h  TermTest.cpp  _pygroebner.cpp  debug.cpp  debug.h  integral.cpp  integral.h  integralTest.cpp  interreduce.cpp  (+4 more)
.ci/: install-packages.sh  run-tests.sh  test-unix.sh
.github/workflows/: ci.yml
